--- a/conf/config.json
+++ b/conf/config.json
@@ -1,5 +1,5 @@
 {
-	"address":"localhost:8080",
-	"bionimbuzAddress":"http://localhost:9090",
+	"address":"http://127.0.0.1:8080",
+	"bionimbuzAddress":"http://127.0.0.1:9090",
 	"uploadedFilesDirectory":"/Users/usuario/Documents/Upload-Client/"
 }
