--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,12 +23,34 @@
 	</context-param>
 
 	<!-- JSF Configuration -->
+	<!-- Restricts the quantity of component trees of a user to 5, avoiding 
+		users to consume too much memory -->
+	<context-param>
+		<param-name>com.sun.faces.numberOfViewsInSession</param-name>
+		<param-value>5</param-value>
+	</context-param>
+
+	<!-- Especifies where to save component tree. To save memory at server-side, 
+		we choose the client-state option, which means that the tree will be saved 
+		in client-side -->
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client-state</param-value>
+	</context-param>
+
+	<!-- If the application returns a ViewExpiredException, user will be redirected 
+		to initial page -->
+	<error-page>
+		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
+		<location>/pages/public/login.xhtml</location>
+	</error-page>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<!-- JSF mapping -->
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
