Estrutura alterada. Configurações da aplicação, configuração dos programas está dinâmica, nova estrutura de Actions

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -58,7 +58,7 @@
 	</servlet-mapping>
 
 	<listener>
-		<listener-class>br.unb.cic.bionimbuz.configuration.ApplicationConfig</listener-class>
+		<listener-class>br.unb.cic.bionimbuz.configuration.ConfigurationRepository</listener-class>
 	</listener>
 
 	<!-- MIME type for .OTF Fonts -->
