--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -35,8 +35,13 @@
 		in client-side -->
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>client-state</param-value>
+		<param-value>server</param-value>
 	</context-param>
+
+	 <context-param>  
+        <param-name>facelets.REFRESH_PERIOD</param-name>  
+        <param-value>-1</param-value>  
+    </context-param>  
 
 	<!-- If the application returns a ViewExpiredException, user will be redirected 
 		to initial page -->
