--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <properties>
+        <slf4j.version>1.6.1</slf4j.version>
+    </properties>
+
     <repositories>
         <repository>
             <id>JBoss Repo</id>
@@ -77,10 +81,18 @@
             <version>2.4</version>
         </dependency>        
                
+        <!-- JavaEE Dependencies (like EJB, CDI, mail, WS...) -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
+        </dependency>
+        
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
 
     </dependencies>
