--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,11 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.1</version>
         </dependency>
-        <dependency>
+        <!--        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>4.4.4</version>
-        </dependency>
+        </dependency>-->
 
 
         <!-- Primefaces Dependency -->
@@ -83,13 +83,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.5.2</version>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.5.2</version>
+            <version>2.7.0</version>
         </dependency> 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.0</version>
+        </dependency>
 
         <!-- Commons IO/FileUpload -->
         <dependency>
