--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.0</version>
         </dependency>
+        
+        <!-- Guava-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r05</version>
+        </dependency>
 
         <!-- Commons IO/FileUpload -->
         <dependency>
