--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.2.1</version>
+        </dependency>
         <!-- Commons IO/FileUpload -->
         <dependency>
             <groupId>commons-fileupload</groupId>
