--- a/WebContent/resources/apiCredentials/AwsCredentials.properties
+++ b/WebContent/resources/apiCredentials/AwsCredentials.properties
@@ -2,5 +2,5 @@
 # Fill in your AWS Access Key ID and Secret Access Key
 #http://docs.aws.amazon.com/AWSImportExport/latest/DG/SaveCredentials.html
 # http://aws.amazon.com/security-credentials
-#accessKeyId:<Your Access Key ID> without space between :
 #secretKey:<Your Secret Key>
+#accessKey:<Your Access Key ID> without space between :
