--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -3,8 +3,17 @@
 # BionimbuzCore REST address (need HTTP://)
 bionimbuz-address: "http://127.0.0.1:8181"
 
+#path application web
+root-path: "/home/biolabid2/BionimbuzClient/"
+
+#application address
+address: "127.0.0.1"
+
 # Temporary workflow folder
-tmp-workflow-folder: "/home/biolabid2/BionimbuzClient/tmp/"
+tmp-workflow-folder: "tmp/"
 
 # Folder that authentication
-buckets-auth-folder: "/home/biolabid2/BionimbuzClient/tmp/"
+buckets-auth-folder: "WebContent/resources/apiCredentials/"
+
+#Storage Mode
+storage-mode: "1"
