--- a/WebContent/resources/apiCredentials/AwsCredentials.properties
+++ b/WebContent/resources/apiCredentials/AwsCredentials.properties
@@ -2,3 +2,5 @@
 # Fill in your AWS Access Key ID and Secret Access Key
 #http://docs.aws.amazon.com/AWSImportExport/latest/DG/SaveCredentials.html
 # http://aws.amazon.com/security-credentials
+secretKey:lTmFx21dv06cqnocnaAH0sIpJSLNvD/8MbgO0lO6
+accessKey:AKIAJQ2BIIAJT2OFAQUA
