--- a/conf/AwsCredentials_template.properties
+++ b/conf/AwsCredentials_template.properties
@@ -2,5 +2,5 @@
 # Fill in your AWS Access Key ID and Secret Access Key
 #http://docs.aws.amazon.com/AWSImportExport/latest/DG/SaveCredentials.html
 # http://aws.amazon.com/security-credentials
-secretKey:2H5qaonUX//7lOlm9VmkPgL/YBLINPqZXWJyUbTD
-accessKey:AKIAI2YZMORKQ6YQNXAA
+secretKey:<Your Secret Key>
+accessKey:<Your Access Key ID> without space between :
